# operator_lover

./: .gitignore  Cargo.toml  README.md
backend/: .env.example  Cargo.toml
backend/src/: db.rs  excel.rs  main.rs  state.rs
frontend/: Cargo.toml  Trunk.toml  index.html  styles.css
frontend/src/: api.rs  components.rs  main.rs  pages.rs
frontend/src/pages/: db.rs  excel.rs  home.rs
shared/src/: lib.rs
