[workspace]
resolver = "2"
members = ["backend", "frontend", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ops-team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
