[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }

leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"

serde = { workspace = true }
serde_json = { workspace = true }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Event",
    "EventTarget",
    "FormData",
    "File",
    "FileList",
    "Blob",
] }

gloo-net = { version = "0.6", features = ["http"] }
